src/objects/Glxy_LPLumpSumObligations__c.object
<CustomObject>
    <fields>
        <fullName>Apr_IA__c</fullName>
        <label>Apr IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_NOA__c</fullName>
        <label>Apr NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_IA__c</fullName>
        <label>Aug IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_NOA__c</fullName>
        <label>Aug NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_IA__c</fullName>
        <label>Dec IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_NOA__c</fullName>
        <label>Dec NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FYAndLSId__c</fullName>
        <externalId>true</externalId>
        <label>FYAndLSId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_IA__c</fullName>
        <formula>Apr_IA__c + May_IA__c + Jun_IA__c + Jul_IA__c + Aug_IA__c + Sep_IA__c + Oct_IA__c + Nov_IA__c + Dec_IA__c + JAN_IA__c + Feb_IA__c + Mar_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_NOA__c</fullName>
        <formula>Apr_NOA__c + May_NOA__c + Jun_NOA__c + Jul_NOA__c + Aug_NOA__c + Sep_NOA__c + Oct_NOA__c + Nov_NOA__c + Dec_NOA__c + JAN_NOA__c + Feb_NOA__c + Mar_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <formula>FY_Obligation_IA__c + FY_Obligation_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_IA__c</fullName>
        <label>Feb IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_NOA__c</fullName>
        <label>Feb NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <label>JAN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <label>JAN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_IA__c</fullName>
        <label>Jul IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_NOA__c</fullName>
        <label>Jul NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_IA__c</fullName>
        <label>Jun IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_NOA__c</fullName>
        <label>Jun NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LPLumpSum__c</fullName>
        <label>LP Lump Sum</label>
        <referenceTo>Glxy_LPLumpSum__c</referenceTo>
        <relationshipName>LP_Lump_Sum_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mar_IA__c</fullName>
        <label>Mar IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_NOA__c</fullName>
        <label>Mar NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_IA__c</fullName>
        <label>May IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_NOA__c</fullName>
        <label>May NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_IA__c</fullName>
        <label>Nov IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_NOA__c</fullName>
        <label>Nov NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_IA__c</fullName>
        <label>Oct IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_NOA__c</fullName>
        <label>Oct NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_IA__c</fullName>
        <label>Sep IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_NOA__c</fullName>
        <label>Sep NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Lease Proj Lump Sum Obligations</label>
    <nameField>
        <displayFormat>LPLSO-{000000}</displayFormat>
        <label>LP Lump Sum Obligation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Proj Lump Sum Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>